name:                json2xlsxR
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/json2xlsxR#readme
license:             BSD3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2017 Stéphane Laurent
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , json2xlsx
  default-language:    Haskell2010
  if os(windows)
    ghc-options:       -O2 -shared -fPIC StartEnd.c -o json2xlsx.dll
  else
    ghc-options:       -O2 -shared -fPIC -dynamic StartEnd.c -o json2xlsx.so
    extra-libraries:   HSrts-ghc8.0.2

source-repository head
  type:     git
  location: https://github.com/stla/json2xlsxR
